--- a/frontend/env.template
+++ b/frontend/env.template
@@ -1,5 +1,10 @@
-# Copy to .env and fill in your credentials
+
+NODE_ENV=development
+PORT=3000
+HOST=localhost
+
+
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
-NEXT_PUBLIC_AI_API_URL=
 NEXT_PUBLIC_AI_API_KEY=
+NEXT_PUBLIC_BACKEND_API_URL=http://localhost:3001/api/
