--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.3.8",
-    "@nestjs/websockets": "^10.3.8",
     "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^11.1.3",
+    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/platform-socket.io": "^11.1.3",
+    "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^5.12.1",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.2.0",
@@ -21,8 +21,8 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
-    "typescript": "^5.0.0",
+    "prisma": "^5.12.1",
     "ts-node": "^10.0.0",
-    "prisma": "^5.12.1"
+    "typescript": "^5.0.0"
   }
 }
