--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 frontend/node_modules
 frontend/.env
+frontend/.next
+frontend/.next/
+frontend/next-env.d.ts
+frontend/*.tsbuildinfo
+
 
 backend/node_modules
 backend/.env
+backend/.vscode
